# neural-style-transfer

./: .gitignore  README.md  manage.py  neural_style_transfer.ipynb  pyproject.toml
neural_style_transfer/: asgi.py  settings.py  urls.py  wsgi.py
neural_style_transfer_tutorial/: asgi.py  settings.py  urls.py
templates/: index.html
tfapp/: apps.py  urls.py  views.py
