[tool.poetry]
name = "neural_style_transfer_tutorial"
version = "0.1.0"
description = ""
authors = ["1pha <1phantasmas@korea.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
