[tool.poetry]
name = "neural-style-transfer"
version = "0.1.0"
description = ""
authors = ["Daehyun Cho <1phantasmas@korea.ac.kr>"]

[tool.poetry.dependencies]
#python = "^3.9"
Django = "^4.0.2"
python = ">=3.9,<3.11"
tensorflow = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
